{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 29,
  "lineage": "d4fc2b48-a762-3024-8a54-bfb2b7aa9460",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edbafb279709d9a8",
            "arn": "arn:aws:ec2:eu-central-1:851725263660:elastic-ip/eipalloc-0edbafb279709d9a8",
            "association_id": "eipassoc-0a21e4cfb5d298156",
            "domain": "vpc",
            "id": "eipalloc-0edbafb279709d9a8",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0abb8c7ca1508bc1c",
            "private_dns": "ip-10-153-10-206.eu-central-1.compute.internal",
            "private_ip": "10.153.10.206",
            "public_dns": "ec2-18-184-238-142.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.238.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_pub_snet_a"
            },
            "tags_all": {
              "Name": "eip_pub_snet_a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgs",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725263660:security-group/sg-06abd86bcf84971ed",
            "description": "SG for the massess",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Default egress rule [tf]",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06abd86bcf84971ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8080 [tf]",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http [tf]",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh  [tf]",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg1",
            "name_prefix": "",
            "owner_id": "851725263660",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg1"
            },
            "tags_all": {
              "Name": "sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04794989594da890f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgs",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg1-164edf093eb04edc2b939d6b6f4808a2b0bb2859",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow http [tf]",
            "from_port": 80,
            "id": "sgrule-4212496480",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06abd86bcf84971ed",
            "security_group_rule_id": "sgr-0216c188066149a47",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sgs",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "sg1-2a20bc438ef07ba70f6cc92e77fc7c4d5f4556a7",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow 8080 [tf]",
            "from_port": 8080,
            "id": "sgrule-12697439",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06abd86bcf84971ed",
            "security_group_rule_id": "sgr-0dab6286b59a88b57",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sgs",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "sg1-740b4d04a7e669d294a7a02a4802ee3c18fb7137",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow ssh  [tf]",
            "from_port": 22,
            "id": "sgrule-1302316501",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06abd86bcf84971ed",
            "security_group_rule_id": "sgr-0b1e8bd69c1a332ef",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sgs",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "sg1-7aec3e15e69e473a2e02d5f8b28557b751954a69",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Default egress rule [tf]",
            "from_port": 0,
            "id": "sgrule-4099692999",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06abd86bcf84971ed",
            "security_group_rule_id": "sgr-06a6c030300ad912e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sgs",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances[\"cloud9\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0793a9d76284434e5",
            "arn": "arn:aws:ec2:eu-central-1:851725263660:instance/i-0a9adcbe69c312836",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9adcbe69c312836",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "unir_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00256cf5639e5252f",
            "private_dns": "ip-10-153-10-247.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.153.10.247",
            "public_dns": "ec2-3-65-11-124.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.65.11.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-central-1:851725263660:key/4fcf07d2-9acc-45d8-9e0a-7b8b52f90bea",
                "throughput": 0,
                "volume_id": "vol-0c94c7efe9486c9e1",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c0ae1e31c749564",
            "tags": {
              "Name": "cloud9",
              "environment": "unir",
              "scheduled": "workdays",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "cloud9",
              "environment": "unir",
              "scheduled": "workdays",
              "terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "cloud9"
            },
            "vpc_security_group_ids": [
              "sg-06abd86bcf84971ed"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.sgs",
            "module.ec2_instances.aws_iam_instance_profile.this",
            "module.ec2_instances.aws_iam_role.this",
            "module.ec2_instances.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instances.data.aws_partition.current",
            "module.ec2_instances.data.aws_ssm_parameter.this",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances[\"slave1\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0793a9d76284434e5",
            "arn": "arn:aws:ec2:eu-central-1:851725263660:instance/i-09cf7cb7003bc69d0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09cf7cb7003bc69d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "unir_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07dc02afee9c791d0",
            "private_dns": "ip-10-153-10-105.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.153.10.105",
            "public_dns": "ec2-3-76-120-4.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.76.120.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-central-1:851725263660:key/4fcf07d2-9acc-45d8-9e0a-7b8b52f90bea",
                "throughput": 0,
                "volume_id": "vol-099735dfbc6138391",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c0ae1e31c749564",
            "tags": {
              "Name": "slave1",
              "environment": "unir",
              "scheduled": "workdays",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "slave1",
              "environment": "unir",
              "scheduled": "workdays",
              "terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "slave1"
            },
            "vpc_security_group_ids": [
              "sg-06abd86bcf84971ed"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.sgs",
            "module.ec2_instances.aws_iam_instance_profile.this",
            "module.ec2_instances.aws_iam_role.this",
            "module.ec2_instances.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instances.data.aws_partition.current",
            "module.ec2_instances.data.aws_ssm_parameter.this",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances[\"slave2\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0793a9d76284434e5",
            "arn": "arn:aws:ec2:eu-central-1:851725263660:instance/i-087f8e4000c32963d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087f8e4000c32963d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "unir_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0114b0be0a8a536cf",
            "private_dns": "ip-10-153-10-29.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.153.10.29",
            "public_dns": "ec2-3-69-148-65.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.69.148.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-central-1:851725263660:key/4fcf07d2-9acc-45d8-9e0a-7b8b52f90bea",
                "throughput": 0,
                "volume_id": "vol-0c05421992cff8c9b",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c0ae1e31c749564",
            "tags": {
              "Name": "slave2",
              "environment": "unir",
              "scheduled": "workdays",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "slave2",
              "environment": "unir",
              "scheduled": "workdays",
              "terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "slave2"
            },
            "vpc_security_group_ids": [
              "sg-06abd86bcf84971ed"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_security_group.sgs",
            "module.ec2_instances.aws_iam_instance_profile.this",
            "module.ec2_instances.aws_iam_role.this",
            "module.ec2_instances.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instances.data.aws_partition.current",
            "module.ec2_instances.data.aws_ssm_parameter.this",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725263660:network-acl/acl-05301e7f9c63950d0",
            "default_network_acl_id": "acl-05301e7f9c63950d0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05301e7f9c63950d0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "851725263660",
            "subnet_ids": [
              "subnet-02c0ae1e31c749564",
              "subnet-0caa5ee24b28e4e09"
            ],
            "tags": {
              "Name": "vpc-unir-default"
            },
            "tags_all": {
              "Name": "vpc-unir-default"
            },
            "vpc_id": "vpc-04794989594da890f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725263660:route-table/rtb-08628a128b856673c",
            "default_route_table_id": "rtb-08628a128b856673c",
            "id": "rtb-08628a128b856673c",
            "owner_id": "851725263660",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-unir-default"
            },
            "tags_all": {
              "Name": "vpc-unir-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04794989594da890f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725263660:security-group/sg-02b6546f23896b95e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02b6546f23896b95e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "851725263660",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-unir-default"
            },
            "tags_all": {
              "Name": "vpc-unir-default"
            },
            "vpc_id": "vpc-04794989594da890f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725263660:internet-gateway/igw-02f11c45a4a805a54",
            "id": "igw-02f11c45a4a805a54",
            "owner_id": "851725263660",
            "tags": {
              "Name": "vpc-unir"
            },
            "tags_all": {
              "Name": "vpc-unir"
            },
            "vpc_id": "vpc-04794989594da890f"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edbafb279709d9a8",
            "association_id": "eipassoc-0a21e4cfb5d298156",
            "connectivity_type": "public",
            "id": "nat-07227650f9175cb55",
            "network_interface_id": "eni-0abb8c7ca1508bc1c",
            "private_ip": "10.153.10.206",
            "public_ip": "18.184.238.142",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02c0ae1e31c749564",
            "tags": {
              "Name": "vpc-unir-eu-central-1c"
            },
            "tags_all": {
              "Name": "vpc-unir-eu-central-1c"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06edfabfc0f7f49bf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07227650f9175cb55",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06edfabfc0f7f49bf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02f11c45a4a805a54",
            "id": "r-rtb-06ded54828e0986341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06ded54828e098634",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.this",
            "module.network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725263660:route-table/rtb-06edfabfc0f7f49bf",
            "id": "rtb-06edfabfc0f7f49bf",
            "owner_id": "851725263660",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07227650f9175cb55",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-unir-private-eu-central-1c"
            },
            "tags_all": {
              "Name": "vpc-unir-private-eu-central-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-04794989594da890f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725263660:route-table/rtb-06ded54828e098634",
            "id": "rtb-06ded54828e098634",
            "owner_id": "851725263660",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f11c45a4a805a54",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-unir-public"
            },
            "tags_all": {
              "Name": "vpc-unir-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04794989594da890f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bec352ff3fbc051",
            "route_table_id": "rtb-06edfabfc0f7f49bf",
            "subnet_id": "subnet-0caa5ee24b28e4e09"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0159fce0e8f7833a2",
            "route_table_id": "rtb-06ded54828e098634",
            "subnet_id": "subnet-02c0ae1e31c749564"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725263660:subnet/subnet-0caa5ee24b28e4e09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.153.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0caa5ee24b28e4e09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725263660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_snet_a"
            },
            "tags_all": {
              "Name": "priv_snet_a"
            },
            "vpc_id": "vpc-04794989594da890f"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725263660:subnet/subnet-02c0ae1e31c749564",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.153.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c0ae1e31c749564",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725263660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_snet_a"
            },
            "tags_all": {
              "Name": "pub_snet_a"
            },
            "vpc_id": "vpc-04794989594da890f"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:851725263660:vpc/vpc-04794989594da890f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.153.0.0/16",
            "default_network_acl_id": "acl-05301e7f9c63950d0",
            "default_route_table_id": "rtb-08628a128b856673c",
            "default_security_group_id": "sg-02b6546f23896b95e",
            "dhcp_options_id": "dopt-0cc0d99a4679021b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04794989594da890f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08628a128b856673c",
            "owner_id": "851725263660",
            "tags": {
              "Name": "vpc-unir"
            },
            "tags_all": {
              "Name": "vpc-unir"
            }
          }
        }
      ]
    }
  ]
}